<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6DE95"
    tools:context=".fragments.ProfileFragment">

    <Button
        android:id="@+id/btnGotoDeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <ImageView
        android:id="@+id/ivProfilePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="92dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvProfileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="241dp"
        tools:layout_editor_absoluteY="99dp" />

    <TextView
        android:id="@+id/tvProfileScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="241dp"
        tools:layout_editor_absoluteY="143dp" />

    <TextView
        android:id="@+id/tvProfileBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="241dp"
        tools:layout_editor_absoluteY="186dp" />

    <Button
        android:id="@+id/btnGotoChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="439dp" />

    <Button
        android:id="@+id/btnGotoChangeEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_email_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="349dp" />

    <TextView
        android:id="@+id/tvProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="229dp" />

    <TextView
        android:id="@+id/tvProfileRankingPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="273dp" />
</androidx.constraintlayout.widget.ConstraintLayout>